# rust-base64

./: .gitignore  .travis.yml  Cargo.nix  Cargo.toml  LICENSE-MIT  Makefile  README.md  RELEASE-NOTES.md  flake.nix  result-bin
.circleci/: config.yml
benches/: avx2benchmarks.rs  benches.rs  benchmarks.rs
examples/: base64.rs  make_tables.rs
fuzz/: Cargo.toml
fuzz/fuzzers/: decode_random.rs  decode_random_avx.rs  roundtrip.rs  roundtrip_avx.rs  roundtrip_avx_equivalent.rs  roundtrip_no_pad.rs  roundtrip_random_config.rs  utils.rs
src/: alphabet.rs  chunked_encoder.rs  decode.rs  decode_tables.rs  display.rs  encode.rs  encoder.rs  lib.rs  line_wrap.rs  main.rs  prelude.rs  serde.rs  tables.rs  tests.rs
src/decode/: mod.rs
src/decode/block/: mod.rs
src/decode/block/arch/: mod.rs  other.rs  x86.rs
src/encode/: mod.rs
src/encode/block/: mod.rs
src/encode/block/arch/: other.rs  x86.rs
src/engine/: mod.rs  naive.rs  simd.rs  tests.rs
src/engine/avx2/: mod.rs
src/engine/fast_portable/: decode.rs  decode_suffix.rs  mod.rs
src/engine/general_purpose/: decode.rs  decode_suffix.rs  mod.rs
src/read/: decoder.rs  decoder_tests.rs
src/write/: encoder.rs  encoder_string_writer.rs  encoder_tests.rs  encoder_utf8.rs  mod.rs
tests/: decode.rs  encode.rs  helpers.rs  tests.rs
