[package]
name = "base64"
version = "0.20.0-alpha.1"
authors = ["Alice Maz <alice@alicemaz.com>", "Marshall Pierce <marshall@mpierce.org>"]
description = "encodes and decodes base64 as bytes or utf8"
repository = "https://github.com/marshallpierce/rust-base64"
documentation = "https://docs.rs/base64"
readme = "README.md"
keywords = ["base64", "utf8", "encode", "decode", "no_std"]
categories = ["encoding"]
license = "MIT OR Apache-2.0"
edition = "2018"
rust-version = "1.47.0"

[[bench]]
name = "benchmarks"
harness = false

[dev-dependencies]
criterion = "0.3.4"
rand = "0.6.1"
structopt = "0.3.21"
# test fixtures for engine tests
rstest = "0.11.0"
rstest_reuse = "0.1.3"

[features]
default = ["std"]
alloc = []
std = []

[profile.bench]
# Useful for better disassembly when using `perf record` and `perf annotate`
debug = true

[profile.test]
# Faster tests save much more than the increase in compilation time
opt-level = 3
