[package]
name = "base64"
version = "0.21.2"
authors = ["Alice Maz <alice@alicemaz.com>", "Marshall Pierce <marshall@mpierce.org>"]
description = "encodes and decodes base64 as bytes or utf8"
repository = "https://github.com/marshallpierce/rust-base64"
documentation = "https://docs.rs/base64"
readme = "README.md"
keywords = ["base64", "utf8", "encode", "decode", "no_std"]
categories = ["encoding"]
license = "MIT OR Apache-2.0"
edition = "2021"
# dev-dependencies require 1.60, but the main code doesn't
rust-version = "1.57.0"

[[bench]]
name = "benchmarks"
harness = false

[dev-dependencies]
criterion = "0.4.0"
rand = { version = "0.8.5", features = ["small_rng"] }
# clap 4 would require 1.60
structopt = "0.3.26"
# test fixtures for engine tests
rstest = "0.12.0"
rstest_reuse = "0.3.0"

[features]
default = ["std"]
alloc = []
std = []

[profile.bench]
# Useful for better disassembly when using `perf record` and `perf annotate`
debug = true

[profile.test]
# Faster tests save much more than the increase in compilation time
opt-level = 3
